--- a/BigSchool/Views/Courses/FollowNotification.cshtml
+++ b/BigSchool/Views/Courses/FollowNotification.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>FollowNotification</h2>
+<h2>Following Notification List</h2>
 
 <div class="row">
     <ul class="course">
