--- a/BigSchool/Views/Home/About.cshtml
+++ b/BigSchool/Views/Home/About.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<p>This application belong to TÔ THANH TÂM - Completed 16/07/2021</p>
+<a href="@Url.Action("Register", "Account")">Experience with BigSchool now</a>
