--- a/BigSchool/Views/Courses/FollowNotification.cshtml
+++ b/BigSchool/Views/Courses/FollowNotification.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BigSchool.ViewModels.FollowNotificationViewModel
 @{
-    ViewBag.Title = "FollowNotification";
+    ViewBag.Title = "Following Notification";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
